fix(modal): change overflow to allow ocdk-surface correct display

--- a/packages/components/src/modal/src/components/osds-modal/osds-modal.scss
+++ b/packages/components/src/modal/src/components/osds-modal/osds-modal.scss
@@ -50,10 +50,12 @@
     }
 
     .content {
+      max-height: 30vh;
+      overflow-y: auto;
+
       .slot {
         display: flex;
         flex-direction: column;
-        overflow-y: auto;
       }
 
       .actions {
